Edited README.rdoc via GitHub

--- a/README.rdoc
+++ b/README.rdoc
@@ -44,9 +44,7 @@ List of supported validators my vary for each db (it depends on RDBMS features a
 
 So - see detailed info here: 
 
-PostgreSQL
-
-http://github.com/vprokopchuk256/mv-postgresql]
+PostgreSQL: https://github.com/vprokopchuk256/mv-postgresql
 
 MySQL: https://github.com/vprokopchuk256/mv-mysql
 SQLite: https://github.com/vprokopchuk256/mv-sqlite
